2009-11-28  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        postMessage should serialize File objects
        https://bugs.webkit.org/show_bug.cgi?id=31955

        Update SerializedScriptValue to include support for
        File objects in the serialized object graph.

        * bindings/js/SerializedScriptValue.cpp:
        (WebCore::SerializedScriptValueData::SerializedScriptValueData):
        (WebCore::SerializingTreeWalker::convertIfTerminal):
        (WebCore::DeserializingTreeWalker::convertIfTerminal):
        * bindings/js/SerializedScriptValue.h:
        (WebCore::SerializedScriptValueData::):
        (WebCore::SerializedScriptValueData::asString):

2009-11-29  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Optimize the hierarchy rebuilding of compositing layers
        https://bugs.webkit.org/show_bug.cgi?id=31879
        
        When updating the compositing layer hierarchy, instead of removing all
        child layers and then re-adding them one by one, build a vector of child
        layers, and set them in one go.
        
        * platform/graphics/GraphicsLayer.h:
        * platform/graphics/GraphicsLayer.cpp:
        (WebCore::GraphicsLayer::setChildren): New method that takes a Vector of child
        GraphicsLayers.
        
        * platform/graphics/mac/GraphicsLayerCA.h: Override setChildren().
        * platform/graphics/win/GraphicsLayerCACF.h: Ditto.
        * platform/graphics/mac/GraphicsLayerCA.mm: 
        (WebCore::GraphicsLayerCA::setChildren): Implement setChildren() to 
        set the bit that notes that sublayers changed.
        * platform/graphics/win/GraphicsLayerCACF.cpp:
        (WebCore::GraphicsLayerCACF::setChildren): Implement setChildren() to 
        udpate sublayers, with a note that this is not efficient.
        
        * rendering/RenderLayerCompositor.h:
        * rendering/RenderLayerCompositor.cpp: